# modemmanager-qt

./: .Doxyfile.cmake  .git-blame-ignore-revs  .reviewboardrc  CMakeLists.txt  FindModemManager.cmake  KF5ModemManagerQtConfig.cmake.in  KF6ModemManagerQtConfig.cmake.in  ModemManagerQt-export.h  ModemManagerQt.pc.cmake  QtModemManager-export.h  README  README.md  bearer.cpp  bearer.h  bearer_p.h  interface.cpp  interface.h  interface_p.h  libmm-qt.kdev4  libmm-qt.pc.cmake  macros.h  manager.cpp  manager.h  manager_p.h  metainfo.yaml  mmdebug.h  mmqt-export.h  modem.cpp  modem.h  modem3gpp.cpp  modem3gpp.h  modem3gpp_p.h  modem3gppussd.cpp  modem3gppussd.h  modem3gppussd_p.h  modem_p.h  modembearerinterface.cpp  modembearerinterface.h  modembearerinterface_p.h  modemcdma.cpp  (+63 more)
autotests/: CMakeLists.txt  bearerpropertiestest.cpp  bearerpropertiestest.h  modem3gpppropertiestest.cpp  modem3gpppropertiestest.h  modem3gppussdpropertiestest.cpp  modem3gppussdpropertiestest.h  modemcdmapropertiestest.cpp  modemcdmapropertiestest.h  modemlocationpropertiestest.cpp  modemlocationpropertiestest.h  modemmessagingpropertiestest.cpp  modemmessagingpropertiestest.h  modemomapropertiestest.cpp  modemomapropertiestest.h  modempropertiestest.cpp  modempropertiestest.h  modemtest.cpp  modemtest.h  modemtimepropertiestest.cpp  modemtimepropertiestest.h
cmake/: FindModemManager.cmake
dbus/: Bearer.cpp  Bearer.h  CMakeLists.txt  Location.cpp  Location.h  Manager.cpp  Manager.h  Messaging.cpp  Messaging.h  Modem.cpp  Modem.h  Modem3gpp.cpp  Modem3gpp.h  Modem3gppUssd.cpp  Modem3gppUssd.h  ModemCdma.cpp  ModemCdma.h  ModemOma.cpp  ModemOma.h  ModemSimple.cpp  ModemSimple.h  Sim.cpp  Sim.h  Sms.cpp  Sms.h  Time.cpp  Time.h  bearerinterface.cpp  bearerinterface.h  dbus.h  dbus_manager.cpp  dbus_manager.h  firmwareinterface.cpp  firmwareinterface.h  generic-types.cpp  generic-types.h  generic-types_p.h  hand-edits.diff  locationinterface.cpp  locationinterface.h  (+68 more)
dbus/introspection/: mm-modem-cdma.xml  mm-modem-gsm-card.xml  mm-modem-gsm-contacts.xml  mm-modem-gsm-network.xml  mm-modem-location.xml  mm-modem.xml  org.freedesktop.ModemManager1.Bearer.xml  org.freedesktop.ModemManager1.Modem.Contacts.xml  org.freedesktop.ModemManager1.Modem.Firmware.xml  org.freedesktop.ModemManager1.Modem.Location.xml  org.freedesktop.ModemManager1.Modem.Messaging.xml  org.freedesktop.ModemManager1.Modem.Modem3gpp.xml  org.freedesktop.ModemManager1.Modem.ModemCdma.xml  org.freedesktop.ModemManager1.Modem.Simple.xml  org.freedesktop.ModemManager1.Modem.Time.xml  org.freedesktop.ModemManager1.Modem.xml  org.freedesktop.ModemManager1.Sms.xml
examples/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  bearer.cpp  bearer.h  bearer_p.h  call.cpp  call.h  call_p.h  cbm.cpp  cbm.h  cbm_p.h  generictypes.cpp  generictypes.h  generictypes_p.h  interface.cpp  interface.h  interface_p.h  macros_p.h  manager.cpp  manager.h  manager_p.h  mmdebug.h  modem.cpp  modem.h  modem3gpp.cpp  modem3gpp.h  modem3gpp_p.h  modem3gppussd.cpp  modem3gppussd.h  modem3gppussd_p.h  modem_p.h  modemcdma.cpp  modemcdma.h  modemcdma_p.h  modemcellbroadcast.cpp  modemcellbroadcast.h  modemcellbroadcast_p.h  modemdevice.cpp  modemdevice.h  modemdevice_p.h  modemfirmware.cpp  (+32 more)
src/dbus/: CMakeLists.txt  bearerinterface.cpp  bearerinterface.h  callinterface.cpp  callinterface.h  cbminterface.cpp  cbminterface.h  cellbroadcastinterface.cpp  cellbroadcastinterface.h  dbus.h  dbus_manager.cpp  dbus_manager.h  fakedbus.h  firmwareinterface.cpp  firmwareinterface.h  locationinterface.cpp  locationinterface.h  messaginginterface.cpp  messaginginterface.h  modem3gppinterface.cpp  modem3gppinterface.h  modemcdmainterface.cpp  modemcdmainterface.h  modeminterface.cpp  modeminterface.h  modemmanager1interface.cpp  modemmanager1interface.h  omainterface.cpp  omainterface.h  signalinterface.cpp  signalinterface.h  siminterface.cpp  siminterface.h  simpleinterface.cpp  simpleinterface.h  smsinterface.cpp  smsinterface.h  timeinterface.cpp  timeinterface.h  ussdinterface.cpp  (+3 more)
src/dbus/introspection/: all.xml  org.freedesktop.ModemManager1.Modem.CellBroadcast.xml  org.freedesktop.ModemManager1.Modem.Messaging.xml
src/fakemodem/: CMakeLists.txt  bearer.cpp  bearer.h  fakemodem.cpp  fakemodem.h  modem.cpp  modem.h  modem3gpp.cpp  modem3gpp.h  modem3gppussd.cpp  modem3gppussd.h  modemcdma.cpp  modemcdma.h  modemlocation.cpp  modemlocation.h  modemmessaging.cpp  modemmessaging.h  modemoma.cpp  modemoma.h  modemsimple.cpp  modemsimple.h  modemtime.cpp  modemtime.h  objectmanager.cpp  objectmanager.h  sms.cpp  sms.h
